working on clock alarms

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sun Sep 02 13:03:50 CDT 2018
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.45\\bin
-configurations-xml=dd67bc22d5dc67e395f826f5ba5857ab
+#Sun Sep 02 18:09:51 CDT 2018
+default.languagetoolchain.dir=/Applications/microchip/xc8/v1.45/bin
+configurations-xml=65cac9cb8fb0ab4366a9c4b001a48681
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=9d53b989b6ed2b6446aae58c2779ca87
 default.languagetoolchain.version=1.45
-host.platform=windows
+host.platform=mac
 conf.ids=default
 default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d0b8fdc2be6cb87257c6731763a65529
